layout issues solved for projects and thoughts section

--- a/style.css
+++ b/style.css
@@ -5,13 +5,17 @@ body {
     margin: 0px;        
 }
 
-
 /****************** GENERAL STYLING LAYOUT********************************/
 .wrapper-styling {
     width: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+}
+
+.section-column-style {
+    flex-direction: column;
     align-items: center;
 }
 
@@ -57,6 +61,7 @@ body {
     color: white;
     display: flex;
     justify-content: center;
+    border-radius: 5px;
 }
 
 /************************ HEADER ************************************/
@@ -213,16 +218,18 @@ h2 {
     border-radius: 2px;
     font-size: 12px;
     margin-right: 5px;
+    padding: 4px;
 }
 
 /*************************** ONLY MY THOUGHTS ABOUT CODE SECTION *****************************/
+ .thoughts-text p {
+     margin-bottom: 0;
+ }
 
+ .thoughts-text h4 {
+     margin: 0;
+ }
 /*************************** SKILLS SECTION *****************************/
-.skills-section { /***FINNS PÅ FLER, TA BORT?? **/
-    flex-direction: column;
-    align-items: center;
-}
-
 .skills-outer-wrapper {
     display: flex;
     justify-content: flex-end;
@@ -338,6 +345,27 @@ footer {
     .spacing {
         font-size: 20px;
     }
+
+    .thoughts-card {
+        width: 80%;
+    }
+    
+    .large-card-wrapper {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .card-link {
+        box-sizing: border-box;
+        width: 50%;
+    }
+
+    .padding-right {
+        padding-right: 20px;
+    }
+    .padding-left {
+        padding-left: 20px;
+    }
     
 }
 
@@ -355,7 +383,7 @@ footer {
     }
 
     h2 {
-        font-size: 50px;
+        font-size: 42px;
     }
 
     .spacing {
@@ -403,14 +431,7 @@ footer {
         margin-top: 0;    
     }
 
-    .large-card-wrapper {
-        flex-direction: row;
-    }
-
-    .card-link {
-        padding-right: 40px;
-        padding-left: 40px;
-    }
+    
 
     .red-style-headline {
         font-size: 38px;
